--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lint": "npm run admin -- lint",
     "fix": "npm run admin -- lint --fix",
     "templates": "node ./bin/devkit-admin templates",
-    "test": "node ./bin/devkit-admin test"
+    "test": "node ./bin/devkit-admin test",
+     "validate-commits": "./bin/devkit-admin validate-commits"
+  
   },
   "repository": {
     "type": "git",
