--- a/packages/ampgular/cli/package.json
+++ b/packages/ampgular/cli/package.json
@@ -57,7 +57,8 @@
     "purify-css":"^1.2.5",
     "string-to-stream":"^1.1.1",
     "postcss":"^7.0.14",
-    "@types/cheerio":"^0.22.11"
+    "@types/cheerio":"^0.22.11",
+    "typescript": "3.2.4"
    
   },
   "ng-update": {
