--- a/packages/ampgular/schematics/seo/package.json
+++ b/packages/ampgular/schematics/seo/package.json
@@ -12,6 +12,7 @@
   "schematics": "./collection.json",
   "dependencies": {
     "@angular-devkit/core": "^7.3.8",
-    "@angular-devkit/schematics": "^7.3.8"
+    "@angular-devkit/schematics": "^7.3.8",
+    "typescript": "3.2.4"
   }
 }
