--- a/packages/ampgular/schematics/amp/package.json
+++ b/packages/ampgular/schematics/amp/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@angular-devkit/core": "^7.3.8",
     "@angular-devkit/schematics": "^7.3.8",
-    "typescript": "3.2.4"
+    "typescript": "3.2.4",
+    "@ampgular/common":"0,0,0"
   }
 }
