--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,6 +97,7 @@ workflows:
       - build:
           requires:
             - install
+            - lint
           filters:
             branches:
               ignore:
