--- a/packages/ampgular/cli/package.json
+++ b/packages/ampgular/cli/package.json
@@ -58,8 +58,8 @@
     "string-to-stream":"^1.1.1",
     "postcss":"^7.0.14",
     "@types/cheerio":"^0.22.11",
-    "typescript": "3.2.4"
-   
+    "typescript": "3.2.4",
+    "open":"^6.1.0"
   },
   "ng-update": {
     "migrations": "@schematics/angular/migrations/migration-collection.json"
