--- a/package.json
+++ b/package.json
@@ -108,5 +108,10 @@
     "ts-node": "^5.0.0",
     "tslint-no-circular-imports": "^0.6.0",
     "tslint-sonarts": "^1.7.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "node ./bin/devkit-admin hooks/pre-push"
+    }
   }
 }
