--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
   },
   "husky": {
     "hooks": {
+      "pre-commit": "npm run test",
       "pre-push": "node ./bin/devkit-admin hooks/pre-push"
     }
   }
