--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,7 +95,11 @@ workflows:
   version: 2
   default_workflow:
     jobs:
-      - install      
+      - install
+          filters:  # using regex filters requires the entire branch to match
+            branches:
+              only:  # only branches matching the below regex filters will run
+                - master    
       - lint:
           requires:
             - install
