--- a/packages/ampgular/cli/package.json
+++ b/packages/ampgular/cli/package.json
@@ -53,6 +53,7 @@
     "rxjs":"6.3.3",
     "css-shortener":"^2.1.0",
     "progress-bar-webpack-plugin": "^1.12.1",
+    "mini-css-extract-plugin":"^0.6.0",
     "cheerio":"^1.0.0-rc.3",
     "purify-css":"^1.2.5",
     "string-to-stream":"^1.1.1",
