--- a/packages/ampgular/schematics/amp/files/ampgular/amp/plugins_config.json
+++ b/packages/ampgular/schematics/amp/files/ampgular/amp/plugins_config.json
@@ -1,17 +1,28 @@
-
 {
   "matFormField": {
-     "routes": {
-        "match": [
-           "/es/about-us-nuilea-day-spa/contacto",
-           "/en/about-us-nuilea-day-spa/contact",
-           "/de/ueber-uns-spa-madrid/kontakt",
-           "/fr/about-us-nuilea-day-spa/contact"
-        ]
-     },
-     "whiteListed": [
-        "mat-form-field-should-float"
-     ],
-     "plugin": "matFormFieldPlugin"
-  }
+    "routes": {
+      "match": [
+        "/es/about-us-nuilea-day-spa/contacto",
+        "/en/about-us-nuilea-day-spa/contact",
+        "/de/ueber-uns-spa-madrid/kontakt",
+        "/fr/about-us-nuilea-day-spa/contact"
+      ]
+    },
+    "whiteListed": ["mat-form-field-should-float"],
+    "plugin": "example"
+  },
+  "analytics": {
+    "routes": {
+      "match": ["**"]
+    },
+    "whiteListed": [],
+    "plugin": "analytics"
+  },
+  "ampAlternate": {
+   "routes": {
+     "match": ["**"]
+   },
+   "whiteListed": [],
+   "plugin": "alternate"
+ }
 }
