--- a/packages/ampgular/cli/package.json
+++ b/packages/ampgular/cli/package.json
@@ -60,7 +60,8 @@
     "postcss":"^7.0.14",
     "@types/cheerio":"^0.22.11",
     "typescript": "3.2.4",
-    "open":"^6.1.0"
+    "open":"^6.1.0",
+    "amphtml-validator":"^1.0.23"
   },
   "ng-update": {
     "migrations": "@schematics/angular/migrations/migration-collection.json"
