fix(@ampgular/cli): me custom tag elements

--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "@types/progress": "^2.0.3",
     "debug": "^4.1.1",
     "express": "^4.16.4",
+    "puppeteer": "^1.15.0",
     "glob": "^7.0.3",
     "node-fetch": "^2.2.0",
-    "puppeteer": "1.12.2",
     "quicktype-core": "^6.0.15",
     "symbol-observable": "^1.2.0",
     "temp": "^0.9.0",
