fix(@ampgular/common): Article Options json.ld

--- a/packages/ampgular/schematics/amp/files/ampgular/amp/plugins_config.json
+++ b/packages/ampgular/schematics/amp/files/ampgular/amp/plugins_config.json
@@ -1,3 +1,9 @@
 {
-  
+    "analytics": {
+        "routes": {
+          "match": ["**"]
+        },
+        "whiteListed": [],
+        "plugin": "analytics"
+      }
 }
