--- a/packages/ampgular/cli/package.json
+++ b/packages/ampgular/cli/package.json
@@ -42,6 +42,8 @@
     "pacote": "9.5.0",
     "semver": "5.6.0",
     "net":"^1.0.2",
+    "express": "^4.16.4",
+    "glob": "^7.0.3",
     "readline":"^1.3.0",
     "symbol-observable": "1.2.0",
     "zone.js": "^0.9.0",
